# aura-scope-builder

./: .gitignore
aura-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
aura-backend/app/: main.py
aura-backend/app/core/: config.py
aura-backend/app/models/: idea_models.py
aura-backend/app/routers/: idea_router.py
aura-backend/app/services/: gemini_service.py
